# ks-backend

./: README.md  RELEASE-NOTES.md  pyproject.toml
.github/workflows/: ci.yml
docs/runbooks/: deployment-runbook.md
scripts/: backfill_archive_turn_counts.py  impute_missing_bot_owner_emails.py  migrate_engine_state_to_canonical.py  migrate_scoresheets_to_engine_state.py  recalculate_archive_ratings.py  reconcile_completed_games_from_live.py  remove_archived_completed_games_from_live.py  remove_nonsense_history_attempts.py  retire_legacy_bcrypt_bots.py
scripts/regression/: backend-regression.sh
src/app/: config.py  db.py  dependencies.py  main.py  monitoring.py  requirements.txt  version.py
src/app/models/: analytics.py  auth.py  (+3 more)
src/tests/: test_analytics_routes.py  test_app_factory.py  test_archive_cleanup_script.py  test_auth_models.py  test_auth_routes.py  test_backfill_archive_turn_counts_script.py  test_bot_flow.py  test_clock_service.py  test_code_generator.py  test_config.py  test_db.py  test_dependencies.py  test_engine_adapter.py  test_engine_state_migration.py  test_game_history_routes.py  test_game_models.py  test_game_router.py  test_game_routes_move.py  test_game_service.py  test_game_state_polling.py  test_game_timeouts.py  test_gameplay_integration.py  test_health.py  test_logging.py  test_monitoring.py  test_password.py  test_player_features.py  test_reconcile_completed_games_script.py  test_session_service.py  test_state_projection_helpers.py  test_user_model.py  test_user_models.py  test_user_routes.py  test_user_service.py  test_version.py
(+21 files in other folders)
