[project]
name = "backend"
version = "1.3.7"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "uvicorn>=0.32.1",
    "ruff>=0.12.1",
    "python-chess>=1.999",
    "mypy>=1.16.1",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "peewee>=3.18.1",
    "kriegspiel @ git+https://github.com/Kriegspiel/ks-game.git@dd0461c4a9ded69cba8511bb88451ea895ec4129",
    "bcrypt>=4.3.0",
    "pydantic-settings>=2.3.4",
    "motor>=3.6.0",
    "pymongo>=4.8.0",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.22",
    "structlog>=24.2.0",
    "sentry-sdk[fastapi]>=2.0.0",
]

[tool.mypy]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.1",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires disposable MongoDB",
]

[tool.black]
line-length = 128
target-version = ["py312"]
include = "src/(app|tests)/.*\\.pyi?$"

[tool.ruff]
line-length = 128
src = ["src/app", "src/tests"]

[tool.ruff.lint]
select = ["E", "F"]

[tool.coverage.run]
source = ["app"]
branch = true
